--- a/src/manifest.json
+++ b/src/manifest.json
@@ -54,7 +54,7 @@
 
 	},
 	"mp-weixin": { /* 微信小程序特有相关 */
-		"appid": "",
+		"appid": "wxdfa435672bfd46dd",
 		"setting": {
 			"urlCheck": false
 		},
