--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "@dcloudio/uni-quickapp-native": "^2.0.0-31420210305001",
     "@dcloudio/uni-quickapp-webview": "^2.0.0-31420210305001",
     "@dcloudio/uni-stat": "^2.0.0-31420210305001",
+    "@dcloudio/uni-ui": "^1.2.11",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
-    "node-sass": "^5.0.0",
     "regenerator-runtime": "^0.12.1",
-    "sass-loader": "^11.0.1",
     "vue": "^2.6.11",
     "vuex": "^3.6.2"
   },
@@ -81,9 +80,13 @@
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
+    "less-loader": "^5.0.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "node-sass": "^5.0.0",
     "postcss-comment": "^2.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^7.0.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
