--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss-comment": "^2.0.0",
     "sass": "^1.32.8",
     "sass-loader": "^7.0.3",
+    "uview-ui": "^1.8.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
