--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@dcloudio/webpack-uni-mp-loader": "^2.0.0-31420210305001",
     "@dcloudio/webpack-uni-pages-loader": "^2.0.0-31420210305001",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.12",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
